新增:
优化:
增大加载窗口中加载动画大小
新闻显示异常字符
加载圆圈动画优化

修复:
无法在屏保中关机/重启